--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -32,7 +32,6 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -46,11 +45,11 @@
                         Krishna Kumar
                         <!-- <span class="text-primary">Kumar</span> -->
                     </h1>
-                    <div class="subheading mb-5">
+                    <!-- <div class="subheading mb-5">
                         Marathahalli, Bengaluru, 560037 ·
                         <a href="mailto:name@email.com">nowimkr@email.com</a>
-                    </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    </div> -->
+                    <p class="lead mb-5">I am python django developer trainee at Edyoda from past 6 months, worked on various projects such as Ecommerce and Blog. Looking for opportunities to work as python django developer. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/krsign/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/krsign"><i class="fab fa-github"></i></a>
@@ -66,9 +65,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Python Django Developer Trainee</h3>
                             <div class="subheading mb-3">Edyoda</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>Doing python django training from last 6 months, worked on different projects in various technologies</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2020 - Present</span></div>
                     </div>
                     
                 </div>
@@ -118,18 +117,19 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Jersey.in</h3>
-                            <div class="subheading mb-3">Ecommerce Project</div>
+                            <h3 class="mb-0">Contact App</h3>
+                            <div class="subheading mb-3">CRUD Project</div>
                             <p>Tech Stack: Python, Django, Bootstrap </p>
+                            <p>Plugins Used: django-crispy-forms, gunicorn, Pillow, whitenoise</p>
                             <p>Features:</p>
                             <ul>
-                                <li>Authentication</li>
-                                <li>Category related products</li>
-                                <li>Add to cart for anonymous user</li>
-                                <li>Remove and update item in carts</li>
-                                <li>See orders</li>
+                                <li>Create contact</li>
+                                <li>Remove contact</li>
+                                <li>Update contact</li>
+                                <li>Delete contact</li>
+                               
                             </ul>
-                            <h5><a href="https://internetbazzar.herokuapp.com/">*click to here to see live overview of this project</a></h5>
+                            <h5><a href="https://crudcontactapp.herokuapp.com">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
                    
@@ -198,19 +198,12 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
             <!-- contact-->
             <section class="resume-section" id="contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact </h2>
+                    <a href="mailto:nowimkr@gmail.com"><h2>Click here to contact me</h2></a>
+                    
                     
                 </div>
             </section>
