--- a/webapp/static/webapp/css/style.css
+++ b/webapp/static/webapp/css/style.css
@@ -159,12 +159,14 @@ sup {
 }
 
 a {
-  color: #bd5d38;
+  /* color: #bd5d38; */
+  color: whitesmoke;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #824027;
+  /* color: #824027; */
+  color: whitesmoke;
   text-decoration: underline;
 }
 
