--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -17,12 +17,12 @@
         <link href="{% static 'webapp/css/base.css' %}" rel="stylesheet" />
         <link rel="stylesheet" href="{% static 'webapp/css/style.css' %}">
     </head>
-    <body id="page-top">
+    <body id="page-top" style="background-color: #eee;">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" style="background-color: burlywood;">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">krsign</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://lh3.googleusercontent.com/8lFKgrLleszYxNkn_eDxMX8wqZu1UHlot2nxaiscKhLi_FMlgy04F0Va96nVv7JLNJImNh9lHGljXjzuDjV2hqM0gl8XEWPtG_gwAOI9xpJAFthwO4qT7jY_hp65-9zVMSdeE4UYyIw7uP5NQW1FGd_axL8UIcDlQEix0ukadYWYZLclN3NyWjcDs99uT2EsCdjFjr8nPjGXwZAOZ-8UAJ0BobkYTkaYDZTNwfl_XxSLEy41gOHBN_j0vFxX68384cFH_TPWvf_wVNv2Ao6DZR1fERWuIM_Oq8ZK9JRZ0pbQFWtEoUiEii17KNtw2lbRtoBJ76i7pju6ISYBatIldj9_sCItlrK79FCl-l3hNYXMY6y_0pjMxElMMtfU30wX-lWZ3i0nEvtW9wfKmQtiAUl2LowMYR62mN3jYKZ4iwfkNf1G_eqONl3jN8kbA7xueMoxc5zOmilxT42lkbtGF0Vv__C7aJPKDn_-LTr9TloHMSxYyNt0OojK9RUY526R8AHePaQhNF6HFx6xkXN9jfZhzc17byXm71-sSwkFjrSXVlKGX-XV4tChL3VoixvlLyTdOD6JzRtOVQrXG0U1HMkDUC-VuguZa_9Bh5zH-dDEtYqZgRS0EZJws28g_GmmMigFyxIXy9onqWwLDf48ESi8nNR7_COQi3aFMkeYHjvSG7r204WTr5glwEF0TB4=w905-h1213-no?authuser=0" alt="" /></span>
+                <span class="d-block d-lg-none">KRISHNA.</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'webapp/images/krsign.png' %}" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -93,7 +93,7 @@
                                 <li>See orders</li>
                                 <li>Logged in user can write their reviews on products</li>
                             </ul>
-                            <h5><a href="https://internetbazzar.herokuapp.com/">*click to here to see live overview of this project</a></h5>
+                            <h5 style="background-color: blue;"><a href="https://internetbazzar.herokuapp.com/">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
 
@@ -111,7 +111,7 @@
                                 <li>Blog by Category</li>
                                 <li>User can search blog</li>
                             </ul>
-                            <h5><a href="https://safe-stream-39451.herokuapp.com">*click to here to see live overview of this project</a></h5>
+                            <h5 style="background-color: blue;"><a href="https://safe-stream-39451.herokuapp.com">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
 
@@ -127,9 +127,8 @@
                                 <li>Remove contact</li>
                                 <li>Update contact</li>
                                 <li>Delete contact</li>
-                               
                             </ul>
-                            <h5><a href="https://crudcontactapp.herokuapp.com">*click to here to see live overview of this project</a></h5>
+                            <h5 style="background-color: blue;"><a href="https://crudcontactapp.herokuapp.com">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
                    
@@ -202,8 +201,8 @@
             <section class="resume-section" id="contact">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Contact </h2>
-                    <a href="mailto:nowimkr@gmail.com"><h2>Click here to contact me</h2></a>
-                    
+                <!-- <a href="mailto:nowimkr@gmail.com">Click here to contact me</a>
+                     -->
                     
                 </div>
             </section>
