--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -17,9 +17,9 @@
         <link href="{% static 'webapp/css/base.css' %}" rel="stylesheet" />
         <link rel="stylesheet" href="{% static 'webapp/css/style.css' %}">
     </head>
-    <body id="page-top" style="background-color: #eee;">
+    <body id="page-top" style="background-color: whitesmoke">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav" style="background-color: burlywood;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">KRISHNA.</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% static 'webapp/images/krsign.png' %}" alt="" /></span>
@@ -43,13 +43,13 @@
                 <div class="resume-section-content">
                     <h1 class="mb-0">
                         Krishna Kumar
-                        <!-- <span class="text-primary">Kumar</span> -->
                     </h1>
-                    <!-- <div class="subheading mb-5">
-                        Marathahalli, Bengaluru, 560037 ·
-                        <a href="mailto:name@email.com">nowimkr@email.com</a>
-                    </div> -->
-                    <p class="lead mb-5">I am python django developer trainee at Edyoda from past 6 months, worked on various projects such as Ecommerce and Blog. Looking for opportunities to work as python django developer. </p>
+                    <div class="subheading mb-5">
+                       Bengaluru, India
+                       <br>
+                        <a href="mailto:name@email.com" style="color: black;"> nowimkr@email.com</a>
+                    </div>
+                    <p class="lead mb-5">Hi! <br> I've been doing python/django training from past 7 months, worked on various projects like Blog and Ecommerce. Looking for job opportunity .</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/krsign/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/krsign"><i class="fab fa-github"></i></a>
@@ -93,7 +93,7 @@
                                 <li>See orders</li>
                                 <li>Logged in user can write their reviews on products</li>
                             </ul>
-                            <h5 style="background-color: blue;"><a href="https://internetbazzar.herokuapp.com/">*click to here to see live overview of this project</a></h5>
+                            <h5 style="background-color: #31367e ;"><a href="https://internetbazzar.herokuapp.com/">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
 
@@ -111,7 +111,7 @@
                                 <li>Blog by Category</li>
                                 <li>User can search blog</li>
                             </ul>
-                            <h5 style="background-color: blue;"><a href="https://safe-stream-39451.herokuapp.com">*click to here to see live overview of this project</a></h5>
+                            <h5 style="background-color: #31367e "><a href="https://safe-stream-39451.herokuapp.com">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
 
@@ -128,7 +128,7 @@
                                 <li>Update contact</li>
                                 <li>Delete contact</li>
                             </ul>
-                            <h5 style="background-color: blue;"><a href="https://crudcontactapp.herokuapp.com">*click to here to see live overview of this project</a></h5>
+                            <h5 style="background-color: #31367e ;"><a href="https://crudcontactapp.herokuapp.com">*click to here to see live overview of this project</a></h5>
                         </div>
                     </div>
                    
@@ -178,20 +178,20 @@
                         <li class="list-inline-item"><img src="{% static 'webapp/images/vscode.png' %}" alt="" srcset="" width="60" height="55"></li>
  
                     </ul>
-                    <div class="subheading mb-3">Other Skills</div>
+                    <div class="subheading mb-3">Other</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Problem Solving
+                            Web Scrapping
+                        </li>
+                        <!-- <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Billiards
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Communications
-                        </li>
+                            
+                        </li> -->
                         
                     </ul>
                 </div>
@@ -200,10 +200,8 @@
             <!-- contact-->
             <section class="resume-section" id="contact">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Contact </h2>
-                <!-- <a href="mailto:nowimkr@gmail.com">Click here to contact me</a>
-                     -->
-                    
+                    <h2 class="mb-5">Contact Me</h2>
+                    <a href="mailto:nowimkr@gmail.com"><h3 style="background-color: #31367e ; color: white;" >Click Here For Mail</h3></a>
                 </div>
             </section>
         </div>
